# appetizer

./: .travis.yml  Cargo.toml  LICENSE  README.md  fragment.fs  vertex.vs
src/: _dep_rasterizable.rs  _dep_texture_map.rs  _dep_world.rs  camera.rs  components.rs  geometry.rs  macros.rs  main.rs  obj_parser.rs  object.rs  profiler.rs  rasterizable.rs  resource_store.rs  resources.rs  shader.rs  systems.rs  texture_map.rs  world.rs
src/components/: light.rs  material.rs  model.rs  name.rs  shader.rs  texture.rs  transformation.rs
src/resources/: camera.rs  delta_time.rs  key_state.rs  keystate.rs  mouse_state.rs  mousestate.rs  projection.rs  texture_map.rs  time.rs
src/systems/: camera_sys.rs  gravity.rs  input_sys.rs  logger.rs  logger_sys.rs  render.rs  render_sys.rs
