[package]
name = "appetizer"
version = "0.1.0"
authors = ["Emily Martins <emily.flakeheart@gmail.com>", "Jannes Drijkoningen <jannesdrijkoningen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.30.0"
gl = "0.13.0"
# Loading textures
image = "0.22.0"

# ECS
specs = "0.15.0"
specs-derive = "0.4.0"

shred = "0.9.2"
shred-derive = "0.6.1"

# Algebra!
nalgebra = "0.18.0"
nalgebra-glm = "0.4.0"
